2009-06-17  Deepak Bhole  <dbhole@redhat.com>

	* IcedTeaPlugin.cc: Fix race condition that led to segfault.
	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Fix a host of race
	conditions brought about by the multi stage asynchronous initialization
	design.
	* netx/net/sourceforge/jnlp/NetxPanel.java: Account for case where handler
	may be null due to an error above.

2009-06-16  Omair Majid  <omajid@redhat.com>

	* netx/javax/jnlp/SingleInstanceListener.java: New file.
	* netx/javax/jnlp/SingleInstanceService.java: New file.

2009-06-16  Omair Majid  <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/services/ServiceUtil.java:
	(invoke): Throw the original exception that caused the problem.

2009-06-10  Omair Majid  <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/JNLPFile.java
	(needsNewJVM): New function. Returns true if the JNLP file requires 
	creating a new JVM.
	(getNewVMArgs): New function. Returns arguments to pass to the new JVM.
	* netx/net/sourceforge/jnlp/JREDesc.java
	(getVMArgs): Fix javadoc to reflect that return value can be null.
	* netx/net/sourceforge/jnlp/Launcher.java
	(launchExternal): Modify to take in arguments to pass to the JVM and 
	arguments to pass to Netx. Try to use the local file to launch this 
	instance if possible.
	(launchExternal): Delegate to new launchExternal.
	(launchExternal): New method. Take in arguments to pass to the JVM and 
	arguments to pass to Netx. Launch Netx with the with the appropriate 
	arguments.
	(launchApplication): If needed, launch a new JVM and pass along the Netx 
	arguments.
	* netx/net/sourceforge/jnlp/Parser.java:
	(getJRE): Call checkVMArgs to check 'java-vm-args' for security. If that 
	fails, assume 'java-vm-args' is null.
	(checkVMArgs): New method. Check that the vmArgs variable contains safe 
	arguments only.
	(getValidVMArguments): New method.
	(getValidStartingVMArguments): New method.
	* netx/net/sourceforge/jnlp/resources/Messages.properties: Add BXnofork.